vpc.tf
resource "aws_vpc" "vpc" {
 cidr_block = "${var.cidr}"
 enable_dns_hostnames = true
 enable_dns_support = true
  tags = {
   Name = "omniLatamVPC"
  }
}
